- [M] arch/x86/boot/header.S			[D] kernel_version support
-						 >  start_of_setup fix: error if setup is
-						 >  not loaded at 0x9000:0000


Fri Sep 18 CST 2015
- [M] arch/x86/boot/tools/build.c		[D] Rewrite, fill holes in header.S
- [M] arch/x86/boot/bootloader.S		[D] Rewrite, read data from header.S


Sun Sep 20 CST 2015
- [M] arch/x86/boot/bootloader.S		[D] Get disk geometry parameters to
- 						 >  load system properly! Ugly assembly!
-						 >  Hmm, ugly, but works.


Mon Sep 21 CST 2015
- [M] Diary/09-21-2015
- [M] arch/x86/boot/bootloader.S		[D] Move kernel from 0x10000 to 0x100000
- [M] arch/x86/boot/pm.c			[D] Pass 0x100000
- [M] arch/x86/pmjump.S				[D] Jump to 0x100000
- [M] arch/x86/kernel/vmSandix.ld.S		[D] Set LOAD_OFFSET to 0xC0000000
-						 >  Add section: brk after bss.
-						 >  brk is used for page tables now.
-						 >  Because we do NOT know how much tables kernel need.
- [M] arch/x86/kernel/head.S			[D] Rewrite, fit to LOAD_OFFSET.
-						 >  Remove early_page_table, use brk_base instead.
-						 >  Map to both virtual address 0 and 0xC0000000.
-						 >  Add kernel_sig to check image integrity.


Tue Sep 22 CST 2015
- [+] scripts/vim-syntax/gas.vim
- [+] include/asm-generic/sections.h		[D] extern symbols from linker script.
- [+] arch/x86/include/asm/sections.h
- [+] arch/x86/include/asm/setup.h
- [+] arch/x86/kernel/setup.c			[D] Architecture-specific setup
- [M] arch/x86/kernel/head.S			[D] Clean up, jump to start_kernel
- [M] init/main.c				[D] Move arch-specific code to arch_setup()


Wed Sep 23 CST 2015
- [+] Diary/09-23-2015
- [+] include/sandix/major.h			[D] Device Major Number
- [M] include/sandix/tty.h			[D] struct tty_struct etc.
- [M] arch/x86/include/asm/current.h		[D] Renamed from sched.h
- [M] drivers/tty/tty_io.c			[D] Add tty_register_driver etc.
- [M] drivers/console/console.c			[D] Add struct tty_driver console_driver.
-						 >  console_driver is the interface between
-						 >  tty layer and vitual console layer.