@@ -1,6 +1,4 @@
 /*
- *	include/sandix/kconfig.h
- *
  *	Copyright (C) 2015 Yizhou Shan <shanyizhou@ict.ac.cn>
  *
  *	This program is free software; you can redistribute it and/or modify
@@ -16,6 +14,11 @@
  *	You should have received a copy of the GNU General Public License along
  *	with this program; if not, write to the Free Software Foundation, Inc.,
  *	51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
+ */
+
+/*
+ * This file is included by every file in Sandix kernel
+ * by using GCC -include opinion
  */
 
 #ifndef _SANDIX_KCONFIG_H_
